@startuml

title __PRACTICAMONA's Class Diagram__\n

  namespace PracticaMona {
    class PracticaMona.DaftLook {
        ~ Outfit : String
        ~ DaftLook()
        ~ display()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.DinoLook {
        ~ Outfit : String
        ~ DinoLook()
        ~ display()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.InvestLook {
        ~ Outfit : String
        ~ InvestLook()
        ~ display()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.Octocat {
        ~ Favact : String
        ~ id : int
        ~ name : String
        ~ Octocat()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.TerraLook {
        ~ Outfit : String
        ~ TerraLook()
        ~ display()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.TestOctocat {
        {static} + main()
    }
  }
  

  namespace PracticaMona {
    class PracticaMona.TroopLook {
        ~ Outfit : String
        ~ TroopLook()
        ~ display()
    }
  }
  

  PracticaMona.DaftLook -up-|> PracticaMona.Octocat
  PracticaMona.DinoLook -up-|> PracticaMona.Octocat
  PracticaMona.InvestLook -up-|> PracticaMona.Octocat
  PracticaMona.TerraLook -up-|> PracticaMona.Octocat
  PracticaMona.TroopLook -up-|> PracticaMona.Octocat


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
